--- a/index.html.html
+++ b/index.html.html
@@ -19,9 +19,9 @@ input,select{width:220px;padding:10px;font-size:20px;font-weight:700;border:2px 
 .footer{text-align:center;margin-top:30px;font-size:14px;color:#555}
 @media(max-width:700px){input,select{width:100%}.row{flex-direction:column;gap:0}}
 </style>
-</head>
-<link rel="manifest" href="manifest.webmanifest">
+<link rel="manifest" href="./manifest.webmanifest">
 <meta name="theme-color" content="#0d355f">
+</head>
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
