--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <select id="courseType">
       <option value="trapezoid" selected>Trapezoid</option>
       <option value="triangle">Triangle (equal legs)</option>
-      <option value="gybe90">90° Gybe (71% reaches)</option>
+      <option value="Triangle 90° gybe (71% reaches)</option>
       <option value="windwardleeward">Windward-Leeward</option>
     </select>
   </label>
