--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
   <label>Course type
     <select id="courseType">
       <option value="trapezoid" selected>Trapezoid</option>
-      <option value="triangle">Triangle (equal legs)</option>
-      <option value="Triangle 90° gybe (71% reaches)</option>
-      <option value="windwardleeward">Windward-Leeward</option>
+<option value="triangle">Triangle (equal legs)</option>
+<option value="gybe90">Triangle 90° gybe (71% reaches)</option>
+<option value="windwardleeward">Windward-Leeward</option>
+
     </select>
   </label>
 
